@@ -88,6 +88,8 @@ fully support the editing toolbar, but was found to be too confusing.
   text loads or other fields mucking up XML export output
 * Add UploadVerification hook for custom file upload validation/security checks
 * (bug 3063) Remove some hardcodings from Hebrew localisation
+* Support SVG rendering with rsvg
+* Cap arbitrary SVG renders to given image size or $wgSVGMaxSize pixels wide
 
 
 === Caveats ===
